--- a/src/components/FileUpload.css
+++ b/src/components/FileUpload.css
@@ -139,11 +139,11 @@ footer {
 }
 
 
-.image-container {
+/* .image-container {
   height: auto;
   overflow: auto; 
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center; 
-}
+} */
